--- a/ClientDashboard_GUI/src/app/app.html
+++ b/ClientDashboard_GUI/src/app/app.html
@@ -1,2 +1,3 @@
-<h1>{{title()}}</h1>
-<p>Default page redirect to the home page to access application features</p>
+<app-navbar></app-navbar>
+
+<router-outlet></router-outlet>
