Finalising changes ensuring primeng components can be utilised with downgraded Angular version

--- a/ClientDashboard_GUI/src/app/home/home.html
+++ b/ClientDashboard_GUI/src/app/home/home.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div>
+  <h1>Welcome to Client Dashboard</h1>
+  
+  <!-- PrimeNG Button to test the setup -->
+  <p-button 
+    label="PrimeNG Test Button" 
+    icon="pi pi-check" 
+    severity="success">
+  </p-button>
+</div>
