--- a/ClientDashboard_GUI/src/styles.css
+++ b/ClientDashboard_GUI/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* PrimeIcons for icons */
+@import 'primeicons/primeicons.css';
