Populate Client info table with client name, current & total sessions

--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.html
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.html
@@ -10,7 +10,7 @@
       <ng-template #body let-client>
           <tr>
               <td>{{ client.name }}</td>
-              <td>{{ client.currentSession }}</td>
+              <td>{{ client.currentBlockSession }}</td>
               <td>{{ client.totalBlockSessions }}</td>
           </tr>
       </ng-template>
