--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -18,12 +18,24 @@
     >
         <ng-template #header>
             <tr>
-                <th style="width:25px">Workout Title</th>
-                <th style="width:20%">Client Name</th>
-                <th style="width:15%">Current Session</th>
-                <th style="width:15%">Total Sessions</th>
-                <th style="width:15%">Session Date</th>
-                <th style="width:10%">Exercises</th>
+                <th pSortableColumn="workoutTitle" style="width:25%">
+                    Workout Title <p-sortIcon field="workoutTitle" />
+                </th>
+                 <th pSortableColumn="clientName" style="width:20%">
+                    Client Name <p-sortIcon field="clientName" />
+                </th>
+                 <th pSortableColumn="currentBlockSession" style="width:15%">
+                    Current Session <p-sortIcon field="currentBlockSession" />
+                </th>
+                 <th pSortableColumn="totalBlockSessions" style="width:15%">
+                    Total Sessions <p-sortIcon field="totalBlockSessions" />
+                </th>
+                 <th pSortableColumn="sessionDate" style="width:15%">
+                    Session Date <p-sortIcon field="sessionDate" />
+                </th>
+                 <th pSortableColumn="exerciseCount" style="width:10%">
+                    Exercise Count <p-sortIcon field="exerciseCount" />
+                </th>
             </tr>
         </ng-template>
         <ng-template #body let-workout>
