--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -18,23 +18,23 @@
     >
         <ng-template #header>
             <tr>
-                <th pSortableColumn="workoutTitle" style="width:25%">
+                <th pSortableColumn="workoutTitle" style="width:22%">
                     Workout Title <p-sortIcon field="workoutTitle" />
                 </th>
-                 <th pSortableColumn="clientName" style="width:20%">
+                 <th pSortableColumn="clientName" style="width:17%">
                     Client Name <p-sortIcon field="clientName" />
                 </th>
-                 <th pSortableColumn="currentBlockSession" style="width:15%">
+                 <th pSortableColumn="currentBlockSession" style="width:17%">
                     Current Session <p-sortIcon field="currentBlockSession" />
                 </th>
-                 <th pSortableColumn="totalBlockSessions" style="width:15%">
+                 <th pSortableColumn="totalBlockSessions" style="width:17%">
                     Total Sessions <p-sortIcon field="totalBlockSessions" />
                 </th>
                  <th pSortableColumn="sessionDate" style="width:15%">
                     Session Date <p-sortIcon field="sessionDate" />
                 </th>
-                 <th pSortableColumn="exerciseCount" style="width:10%">
-                    Exercise Count <p-sortIcon field="exerciseCount" />
+                 <th pSortableColumn="exerciseCount" style="width:15%">
+                    Exercises <p-sortIcon field="exerciseCount" />
                 </th>
             </tr>
         </ng-template>
