Create RemoveClientByIdAsync method to combat removing clients accurately, along with a trash icon idicator on the frontend, being a button used to invoke the method

--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.html
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.html
@@ -89,6 +89,19 @@
                         rounded
                         severity="secondary"
                     ></button>
+
+                    <button
+                        *ngIf="editing"
+                        pButton
+                        pRipple
+                        type="button"
+                        pCancelEditableRow
+                        icon="pi pi-trash"
+                        (click)="onRowDelete(client.name)"
+                        text
+                        rounded
+                        severity="secondary"
+                    ></button>
                 </div>
             </td>
         </tr>
