Swap from clientName to clientId retrieval on the frontend

--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.html
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.html
@@ -97,7 +97,7 @@
                         type="button"
                         pCancelEditableRow
                         icon="pi pi-trash"
-                        (click)="onRowDelete(client.name)"
+                        (click)="onRowDelete(client.id)"
                         text
                         rounded
                         severity="secondary"
