--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.html
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.html
@@ -1,7 +1,25 @@
+
 <div class="table-container">
   <p-table [value]="clients" dataKey="id" editMode="row" [tableStyle]="{ 'min-width': '50rem' }">
       <ng-template #header>
-        <p-button icon="pi pi-plus" label="New" severity="secondary" (onClick)="addNewClient('clientName', 4)"></p-button>
+        <div class="card flex justify-center">
+          <p-button icon="pi pi-plus" label="New" severity="secondary" (onClick)="showDialog()"></p-button>
+          <p-dialog header="Add new Client" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
+              <span class="p-text-secondary block mb-8">Enter new client details:</span>
+              <div class="flex items-center gap-4 mb-4">
+                  <label for="clientName" class="font-semibold w-24">Client Name</label>
+                  <input pInputText [(ngModel)]="newClientName" id="clientName" class="flex-auto" autocomplete="off" />
+              </div>
+              <div class="flex items-center gap-4 mb-8">
+                  <label for="totalBlockSessions" class="font-semibold w-24">Total Block Sessions</label>
+                  <input pInputText [(ngModel)]="newTotalBlockSessions" id="totalBlockSessions" class="flex-auto" autocomplete="off" />
+              </div>
+              <div class="flex justify-end gap-2">
+                  <p-button label="Cancel" severity="secondary" (click)="visible = false" />
+                  <p-button label="Save" (click)="addNewClient(newClientName, newTotalBlockSessions)"/>
+              </div>
+          </p-dialog> 
+        </div>
           <tr>
               <th pSortableColumn="name" style="width:33%">
                     Client Name <p-sortIcon field="name" />
