--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.html
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.html
@@ -6,8 +6,8 @@
   <p-table [value]="clients" dataKey="id" editMode="row" [tableStyle]="{ 'min-width': '50rem' }">
       <ng-template #header>
         <div class="card flex justify-center">
-          <p-button icon="pi pi-plus" label="New" severity="secondary" (onClick)="showDialog()"></p-button>
-          <p-dialog header="Add new Client" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
+          <p-button icon="pi pi-plus" label="New" severity="secondary" (onClick)="showDialogForAdd()"></p-button>
+          <p-dialog header="Add new Client" [modal]="true" [(visible)]="addDialogVisible" [style]="{ width: '25rem' }">
               <span class="p-text-secondary block mb-8">Enter new client details:</span>
               <div class="flex items-center gap-4 mb-4">
                   <label for="clientName" class="font-semibold w-24">Client Name</label>
@@ -18,7 +18,7 @@
                   <input pInputText [(ngModel)]="newTotalBlockSessions" id="totalBlockSessions" class="flex-auto" autocomplete="off" />
               </div>
               <div class="flex justify-end gap-2">
-                  <p-button label="Cancel" severity="secondary" (click)="visible = false" />
+                  <p-button label="Cancel" severity="secondary" (click)="addDialogVisible = false" />
                   <p-button label="Save" (click)="addNewClient(newClientName, newTotalBlockSessions)"/>
               </div>
           </p-dialog> 
@@ -111,19 +111,42 @@
                         rounded
                         severity="secondary"
                     ></button>
-
-                    <button
+                    <!-- <button
                         *ngIf="editing"
                         pButton
                         pRipple
                         type="button"
                         pCancelEditableRow
                         icon="pi pi-trash"
-                        (click)="onRowDelete(client.id)"
+                        (click)="showDialogForDelete()"
                         text
                         rounded
                         severity="secondary"
-                    ></button>
+                    ></button> -->
+                    <div class="card flex justify-center">
+                      <p-button
+                        *ngIf="editing"
+                        pButton
+                        pRipple
+                        type="button"
+                        pCancelEditableRow
+                        icon="pi pi-trash"
+                        (click)="showDialogForDelete()"
+                        text
+                        rounded
+                        severity="secondary"
+                    ></p-button>
+                      <p-dialog header="Delete Client" [modal]="true" [(visible)]="deleteDialogVisible" [style]="{ width: '25rem' }">
+                        <div class="delete-message">
+                          <span class="p-text-secondary block mb-8">Are you sure you want to delete this client from your table?</span>
+                        </div>
+                          <div class="flex justify-end gap-2">
+                              <p-button label="Cancel" severity="secondary" (click)="deleteDialogVisible = false" />
+                              <p-button label="Delete" (click)=" onRowDelete(client.id)" />
+                          </div>
+                      </p-dialog>
+                    </div>
+                    
                 </div>
             </td>
         </tr>
