Add toasts that display upon adding / deleting and updating clients within the client-info component

--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.html
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.html
@@ -2,6 +2,8 @@
   <app-spinner></app-spinner>
 }
 @else {
+
+<p-toast />
   <div class="table-container">
   <p-table [value]="clients" dataKey="id" editMode="row" [tableStyle]="{ 'min-width': '50rem' }">
       <ng-template #header>
