--- a/ClientDashboard_GUI/src/app/home/home.css
+++ b/ClientDashboard_GUI/src/app/home/home.css
@@ -3,3 +3,9 @@
   justify-content: center;
   align-items: center;
 }
+
+.toggle-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
