Finalise rough register page containing input field containing registerDto values

--- a/ClientDashboard_GUI/src/app/home/home.html
+++ b/ClientDashboard_GUI/src/app/home/home.html
@@ -2,13 +2,13 @@
   <div>
   <h1 class="header">Welcome to Client Dashboard</h1>
   <app-login></app-login>
-  <p-button class="toggle-button" label="Register" severity="success" (click)="toggleToRegisterPage()"/> 
+  <p-button class="toggle-button" label="To Register" severity="success" (click)="toggleToRegisterPage()"/> 
 </div>
 }
 @else {
   <div class>
   <h1 class="header">Welcome to Client Dashboard</h1>
   <app-register></app-register>
-  <p-button class="toggle-button" label="Login" severity="success" (click)="toggleToLoginPage()"/> 
+  <p-button class="toggle-button" label="To Login" severity="success" (click)="toggleToLoginPage()"/> 
 </div>
 }
