Introduce singular toastService across components enabling smooth toasts during navigation and reduction in redundancy

--- a/ClientDashboard_GUI/src/app/home/home.html
+++ b/ClientDashboard_GUI/src/app/home/home.html
@@ -12,3 +12,9 @@
   <p-button class="toggle-button" label="To Login" severity="success" (click)="toggleToLoginPage()"/> 
 </div>
 }
+
+<!-- 
+ <p-button class="toggle-button" label="To Login" severity="success" routerLink="/login"/> 
+
+ <p-button class="toggle-button" label="To Register" severity="success" routerLink="/register"/>  -->
+
