--- a/ClientDashboard_GUI/src/app/login/login.component.html
+++ b/ClientDashboard_GUI/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-
+<h1 class="header">Login Below</h1>
 <div class="login-component">
   <div class="card flex justify-center">
     <div class="login-field">
@@ -13,6 +13,8 @@
           <label>Password</label>
       </p-iftalabel>
       <p-button class="login-button" label="Login" severity="success" (click)="trainerLogin(email, password)"/>
+
+      <p-button class="to-register-button" label="To Register" severity="success" routerLink="/register"/>
     </div>
   </div>
 </div>
