--- a/ClientDashboard_GUI/src/styles.css
+++ b/ClientDashboard_GUI/src/styles.css
@@ -7,3 +7,9 @@ body {
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
 }
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
