--- a/ClientDashboard_GUI/src/app/login/login.component.html
+++ b/ClientDashboard_GUI/src/app/login/login.component.html
@@ -1,20 +1,19 @@
-<h1 class="header">Login Below</h1>
-<div class="login-component">
-  <div class="card flex justify-center">
-    <div class="login-field">
-      <p-iftalabel>
-        <input pInputText id="email" [(ngModel)]="email" />
-        <label>Email</label>
-      </p-iftalabel>
-    </div>
-    <div class="login-field">
-      <p-iftalabel>
-          <p-password [(ngModel)]="password" [feedback]="false" toggleMask="true"/>
-          <label>Password</label>
-      </p-iftalabel>
-      <p-button class="login-button" label="Login" severity="success" (click)="trainerLogin(email, password)"/>
-
-      <p-button class="to-register-button" label="To Register" severity="success" routerLink="/register"/>
-    </div>
-  </div>
+<div class="login-form-container">
+  <h1 class="header">Login Below</h1>
+        <div class="login-field">
+          <p-iftalabel>
+            <input pInputText id="email" [(ngModel)]="email" />
+            <label>Email</label>
+          </p-iftalabel>
+        </div>
+        <div class="login-field">
+          <p-iftalabel>
+              <p-password [(ngModel)]="password" [feedback]="false" toggleMask="true"/>
+              <label>Password</label>
+          </p-iftalabel>
+        </div>
+        <div class="button-container">
+            <p-button class="login-button" label="Login" severity="success" (click)="trainerLogin(email, password)"/>
+            <p-button class="to-register-button" label="To Register" severity="secondary" routerLink="/register"/>
+          </div>
 </div>
