--- a/ClientDashboard_GUI/src/app/register/register.component.css
+++ b/ClientDashboard_GUI/src/app/register/register.component.css
@@ -1,11 +1,59 @@
+.header{
+  text-align: center;
+  margin-bottom: 1rem;
+  font-size: 2rem;
+  font-weight: 600;
+}
 
 .register-field {
+  margin-bottom: 0.5rem;
+  width: 100%;
+}
+
+.register-form-container {
+  max-width: 350px;
+  margin: 0 auto;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.register-field input[pInputText],
+.register-field p-password {
+  width: 100% ;
+  min-height: 3rem;
+}
+
+
+.register-button,
+.to-login-button {
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 5px;
+  margin-right: 5px;
+  min-height: 3rem;
+  min-width: 2rem;
 }
 
-.to-login-button {
+/* smaller screens */
+@media (max-width: 768px) {
+  .register-form-container {
+    max-width: 300px;
+    padding: 1rem;
+  }
+  
+  .button-container {
+    flex-direction: column;
+  }
+  
+  .register-button,
+  .to-login-button {
+    width: 100%;
+  }
 }
+
 
 
