--- a/ClientDashboard_GUI/src/app/navbar/navbar.html
+++ b/ClientDashboard_GUI/src/app/navbar/navbar.html
@@ -1,3 +1,6 @@
-<div class="card">
-    <p-menubar [model]="items" />
-</div>
+@if(accountService.currentUser()){
+    <div class="card">
+        <p-menubar [model]="items" />
+    </div>
+}
+
