--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -2,6 +2,7 @@
     <app-spinner></app-spinner>
 }
 @else {
+    <p-toast />
     <div class="table-container">
     <p-table
         [value]="workouts"
@@ -15,6 +16,24 @@
         [rowsPerPageOptions]="[10, 20, 30]"
     >
         <ng-template #header>
+            <div class="card flex justify-center">
+                <p-button icon="pi pi-plus" (click)="showDialog()" label="Add Workout" />
+                <p-dialog header="Add new Workout" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
+                    <span class="p-text-secondary block mb-8">Enter new workout details:</span>
+                    <div class="flex items-center gap-4 mb-4">
+                        <label for="username" class="font-semibold w-24">Workout Title</label>
+                        <input pInputText id="username" class="flex-auto" autocomplete="off" />
+                    </div>
+                    <div class="flex items-center gap-4 mb-8">
+                        <label for="email" class="font-semibold w-24">Client Name</label>
+                        <input pInputText id="email" class="flex-auto" autocomplete="off" />
+                    </div>
+                    <div class="flex justify-end gap-2">
+                        <p-button label="Cancel" severity="secondary" (click)="visible = false" />
+                        <p-button label="Save" (click)="visible = false" />
+                    </div>
+                </p-dialog>
+            </div>
             <div class="mb-4">
                 <p-button type="button" icon="pi pi-chevron-left" (click)="prev()" [disabled]="isFirstPage()" text />
                 <p-button type="button" icon="pi pi-refresh" (click)="reset()" text />
