--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="flex items-center gap-4 mb-8">
                         <label for="email" class="font-semibold w-24">Client Name</label>
-                        <input pInputText id="email" class="flex-auto" autocomplete="off" />
+                        <p-autocomplete [(ngModel)]="clientName" [dropdown]="true" [suggestions]="clients" (onDropdownClick)="gatherClientNames()" />
                     </div>
                     <div class="flex justify-end gap-2">
                         <p-button label="Cancel" severity="secondary" (click)="visible = false" />
