--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -18,7 +18,7 @@
         <ng-template #header>
             <div class="card flex justify-center">
                 <p-button icon="pi pi-plus" (click)="showDialog()" label="Add Workout" />
-                <p-dialog header="Add new Workout" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
+                <p-dialog header="Add new Workout" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem', height: 'auto'}">
                     <span class="p-text-secondary block mb-8">Enter new workout details:</span>
                     <div class="flex items-center gap-4 mb-4">
                         <label for="username" class="font-semibold w-24">Workout Title</label>
@@ -26,7 +26,7 @@
                     </div>
                     <div class="flex items-center gap-4 mb-8">
                         <label for="email" class="font-semibold w-24">Client Name</label>
-                        <p-autocomplete [(ngModel)]="clientName" [dropdown]="true" [suggestions]="clients" (onDropdownClick)="gatherClientNames()" />
+                        <p-autocomplete [appendTo]="'body'" [(ngModel)]="clientName" [dropdown]="true" [suggestions]="clients" (onDropdownClick)="gatherClientNames()" />
                     </div>
                     <div class="flex justify-end gap-2">
                         <p-button label="Cancel" severity="secondary" (click)="visible = false" />
