--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -17,16 +17,24 @@
     >
         <ng-template #header>
             <div class="card flex justify-center">
-                <p-button icon="pi pi-plus" (click)="showDialog()" label="Add Workout" />
+                <p-button icon="pi pi-plus" (click)="showDialogForAdd()" label="Add Workout" />
                 <p-dialog header="Add new Workout" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem', height: 'auto'}">
                     <span class="p-text-secondary block mb-8">Enter new workout details:</span>
                     <div class="flex items-center gap-4 mb-4">
-                        <label for="username" class="font-semibold w-24">Workout Title</label>
-                        <input pInputText id="username" class="flex-auto" autocomplete="off" />
+                        <label for="workout-title" class="font-semibold w-24">Workout Title</label>
+                        <input pInputText id="workout-title" [(ngModel)]="workoutTitle" class="flex-auto" autocomplete="off" />
                     </div>
                     <div class="flex items-center gap-4 mb-8">
-                        <label for="email" class="font-semibold w-24">Client Name</label>
+                        <label for="client-name" class="font-semibold w-24">Client Name</label>
                         <p-autocomplete [appendTo]="'body'" [(ngModel)]="clientName" [dropdown]="true" [suggestions]="clients" (onDropdownClick)="gatherClientNames()" />
+                    </div>
+                    <div class="flex items-center gap-4 mb-8">
+                        <label for="workout-date" class="font-semibold w-24">Session Date</label>
+                        <p-datepicker [appendTo]="'body'" [(ngModel)]="date" dateFormat="dd/mm/yy" />
+                    </div>
+                    <div class="flex items-center gap-4 mb-8">
+                        <label for="exercise-count" class="font-semibold w-24">Exercise Count</label>
+                        <input pInputText id="exercise-count" [(ngModel)]="exerciseCount" class="flex-auto" autocomplete="off" />
                     </div>
                     <div class="flex justify-end gap-2">
                         <p-button label="Cancel" severity="secondary" (click)="visible = false" />
