--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.html
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.html
@@ -17,7 +17,7 @@
               </div>
               <div class="flex items-center gap-4 mb-8">
                   <label for="totalBlockSessions" class="font-semibold w-24">Total Block Sessions</label>
-                  <input pInputText [(ngModel)]="newTotalBlockSessions" id="totalBlockSessions" class="flex-auto" autocomplete="off" />
+                  <p-inputnumber inputId="totalBlockSessions" [(ngModel)]="newTotalBlockSessions" id="totalBlockSessions" class="flex-auto" autocomplete="off" />
               </div>
               <div class="flex justify-end gap-2">
                   <p-button label="Cancel" severity="secondary" (click)="addDialogVisible = false" />
