--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -34,7 +34,7 @@
                     </div>
                     <div class="flex items-center gap-4 mb-8">
                         <label for="exercise-count" class="font-semibold w-24">Exercise Count</label>
-                        <input pInputText id="exercise-count" [(ngModel)]="exerciseCount" class="flex-auto" autocomplete="off" />
+                        <p-inputnumber inputId="exercise-count" [(ngModel)]="exerciseCount" id="exercise-count" class="flex-auto" autocomplete="off" />
                     </div>
                     <div class="flex justify-end gap-2">
                         <p-button label="Cancel" severity="secondary" (click)="visible = false" />
