--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="flex justify-end gap-2">
                         <p-button label="Cancel" severity="secondary" (click)="visible = false" />
-                        <p-button label="Save" (click)="addNewWorkout(selectedClient, workoutTitle, sessionDate ?? undefined, exerciseCount)" />
+                        <p-button label="Save" (click)="addNewWorkout(selectedClient, workoutTitle, sessionDate, exerciseCount)" />
                     </div>
                 </p-dialog>
             </div>
