--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -18,7 +18,7 @@
         <ng-template #header>
             <div class="card flex justify-center">
                 <p-button icon="pi pi-plus" (click)="showDialogForAdd()" severity="secondary" label="Add Workout" />
-                <p-dialog header="Add new Workout" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem', height: 'auto'}">
+                <p-dialog header="Add new Workout" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem', height: 'auto'}" >
                     <span class="p-text-secondary block mb-8">Enter new workout details:</span>
                     <div class="flex items-center gap-4 mb-4">
                         <label for="workout-title" class="font-semibold w-24">Workout Title</label>
@@ -69,13 +69,89 @@
             </tr>
         </ng-template>
         <ng-template #body let-workout>
-            <tr>
-                <td>{{ workout.workoutTitle }}</td>
+            <tr [pEditableRow]="workout">
+                <!-- <td>{{ workout.workoutTitle }}</td> -->
+                <td>
+                <p-cellEditor>
+                    <ng-template #input>
+                        <input
+                            pInputText type="text"
+                            [(ngModel)]= "workout.workoutTitle" />
+                    </ng-template>
+                    <ng-template #output>
+                        {{workout.workoutTitle}}
+                    </ng-template>
+                </p-cellEditor>
+              </td>
                 <td>{{ workout.clientName }}</td>
                 <td>{{ workout.currentBlockSession }}</td>
                 <td>{{ workout.totalBlockSessions }}</td>
                 <td>{{ workout.sessionDate | date: 'dd/MM/yyyy' }}</td>
                 <td>{{ workout.exerciseCount }}</td>
+                <td>
+                <div class="flex items-center justify-center gap-2">
+                    <button
+                        *ngIf="!editing"
+                        pButton
+                        pRipple
+                        type="button"
+                        pInitEditableRow
+                        icon="pi pi-pencil"
+                        (click)="onRowEditInit(client)"
+                        text
+                        rounded
+                        severity="secondary"
+                    ></button>
+                    <button
+                        *ngIf="editing"
+                        pButton
+                        pRipple
+                        type="button"
+                        pSaveEditableRow
+                        icon="pi pi-check"
+                        (click)="onRowEditSave(client)"
+                        text
+                        rounded
+                        severity="secondary"
+                    ></button>
+                    <button
+                        *ngIf="editing"
+                        pButton
+                        pRipple
+                        type="button"
+                        pCancelEditableRow
+                        icon="pi pi-times"
+                        (click)="onRowEditCancel(client, ri)"
+                        text
+                        rounded
+                        severity="secondary"
+                    ></button>
+                    <div class="card flex justify-center">
+                      <p-button
+                        *ngIf="editing"
+                        pButton
+                        pRipple
+                        type="button"
+                        pCancelEditableRow
+                        icon="pi pi-trash"
+                        (click)="showDialogForDelete()"
+                        text
+                        rounded
+                        severity="secondary"
+                    ></p-button>
+                      <p-dialog header="Delete Client" [modal]="true" [(visible)]="deleteDialogVisible" [style]="{ width: '25rem' }">
+                        <div class="delete-message">
+                          <span class="p-text-secondary block mb-8">Are you sure you want to delete this client from your table?</span>
+                        </div>
+                          <div class="flex justify-end gap-2">
+                              <p-button label="Cancel" severity="secondary" (click)="deleteDialogVisible = false" />
+                              <p-button label="Delete" (click)=" onRowDelete(client.id)" />
+                          </div>
+                      </p-dialog>
+                    </div>
+                    
+                </div>
+            </td>
             </tr>
         </ng-template>
         
