--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -14,11 +14,13 @@
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
         (onPage)="pageChange($event)"
         [rowsPerPageOptions]="[10, 20, 30]"
+        dataKey="id"
+        editMode="row"
     >
         <ng-template #header>
             <div class="card flex justify-center">
                 <p-button icon="pi pi-plus" (click)="showDialogForAdd()" severity="secondary" label="Add Workout" />
-                <p-dialog header="Add new Workout" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem', height: 'auto'}" >
+                <p-dialog header="Add new Workout" [modal]="true" [(visible)]="addDialogVisible" [style]="{ width: '25rem', height: 'auto'}" >
                     <span class="p-text-secondary block mb-8">Enter new workout details:</span>
                     <div class="flex items-center gap-4 mb-4">
                         <label for="workout-title" class="font-semibold w-24">Workout Title</label>
@@ -37,7 +39,7 @@
                         <p-inputnumber inputId="exercise-count" [(ngModel)]="exerciseCount" id="exercise-count" class="flex-auto" autocomplete="off" />
                     </div>
                     <div class="flex justify-end gap-2">
-                        <p-button label="Cancel" severity="secondary" (click)="visible = false" />
+                        <p-button label="Cancel" severity="secondary" (click)="addDialogVisible = false" />
                         <p-button label="Save" (click)="addNewWorkout(selectedClient, workoutTitle, sessionDate, exerciseCount)" />
                     </div>
                 </p-dialog>
@@ -68,9 +70,8 @@
                 </th>
             </tr>
         </ng-template>
-        <ng-template #body let-workout>
+        <ng-template #body let-workout let-editing="editing" let-ri="rowIndex">
             <tr [pEditableRow]="workout">
-                <!-- <td>{{ workout.workoutTitle }}</td> -->
                 <td>
                 <p-cellEditor>
                     <ng-template #input>
@@ -86,8 +87,31 @@
                 <td>{{ workout.clientName }}</td>
                 <td>{{ workout.currentBlockSession }}</td>
                 <td>{{ workout.totalBlockSessions }}</td>
-                <td>{{ workout.sessionDate | date: 'dd/MM/yyyy' }}</td>
-                <td>{{ workout.exerciseCount }}</td>
+                <td>
+                <p-cellEditor>
+                    <ng-template #input>
+                        <input
+                            pInputText type="date"
+                            [(ngModel)]= "workout.sessionDate" />
+                    </ng-template>
+                    <ng-template #output>
+                        {{workout.sessionDate}}
+                    </ng-template>
+                </p-cellEditor>
+              </td>
+                <td>
+                <p-cellEditor>
+                    <ng-template #input>
+                        <input class="exercise-count-input"
+                            pInputText type="number"
+                            [(ngModel)]= "workout.exerciseCount" />
+                    </ng-template>
+                    <ng-template #output>
+                        {{workout.exerciseCount}}
+                    </ng-template>
+                </p-cellEditor>
+              </td>
+                
                 <td>
                 <div class="flex items-center justify-center gap-2">
                     <button
@@ -97,7 +121,7 @@
                         type="button"
                         pInitEditableRow
                         icon="pi pi-pencil"
-                        (click)="onRowEditInit(client)"
+                        (click)="onRowEditInit(workout)"
                         text
                         rounded
                         severity="secondary"
@@ -109,7 +133,7 @@
                         type="button"
                         pSaveEditableRow
                         icon="pi pi-check"
-                        (click)="onRowEditSave(client)"
+                        (click)="onRowEditSave(workout)"
                         text
                         rounded
                         severity="secondary"
@@ -121,7 +145,7 @@
                         type="button"
                         pCancelEditableRow
                         icon="pi pi-times"
-                        (click)="onRowEditCancel(client, ri)"
+                        (click)="onRowEditCancel(workout, ri)"
                         text
                         rounded
                         severity="secondary"
@@ -145,7 +169,7 @@
                         </div>
                           <div class="flex justify-end gap-2">
                               <p-button label="Cancel" severity="secondary" (click)="deleteDialogVisible = false" />
-                              <p-button label="Delete" (click)=" onRowDelete(client.id)" />
+                              <p-button label="Delete" (click)=" onRowDelete(workout.id)" />
                           </div>
                       </p-dialog>
                     </div>
