--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.html
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.html
@@ -26,16 +26,16 @@
           </p-dialog> 
         </div>
           <tr>
-              <th pSortableColumn="name" style="width:25%">
+              <th pSortableColumn="name" style="width:25%; text-align: center;">
                     Client Name <p-sortIcon field="name" />
               </th>
-              <th pSortableColumn="currentBlockSession" style="width:25%">
+              <th pSortableColumn="currentBlockSession" style="width:25%; text-align: center;">
                     Current Session <p-sortIcon field="currentBlockSession" />
               </th>
-              <th pSortableColumn="totalBlockSessions" style="width:25%">
+              <th pSortableColumn="totalBlockSessions" style="width:25%; text-align: center;">
                     Block Sessions <p-sortIcon field="totalBlockSessions" />
               </th>
-              <th pSortableColumn="isActive" style="width:25%">
+              <th pSortableColumn="isActive" style="width:25%; text-align: center;">
                     Activity Status <p-sortIcon field="isActive" />
               </th>
           </tr>
