--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -19,7 +19,7 @@
     >
         <ng-template #header>
             <div class="card flex justify-center">
-                <p-button icon="pi pi-plus" (click)="showDialogForAdd()" severity="secondary" label="Add Workout" />
+                <p-button icon="pi pi-plus" (click)="showDialogForAdd()" severity="secondary" label="New" />
                 <p-dialog header="Add new Workout" [modal]="true" [(visible)]="addDialogVisible" [style]="{ width: '25rem', height: 'auto'}" >
                     <span class="p-text-secondary block mb-8">Enter new workout details:</span>
                     <div class="flex items-center gap-4 mb-4">
@@ -165,7 +165,7 @@
                     ></p-button>
                       <p-dialog header="Delete Workout" [modal]="true" [(visible)]="deleteDialogVisible" [style]="{ width: '25rem' }">
                         <div class="delete-message">
-                          <span class="p-text-secondary block mb-8">Are you sure you want to delete this workout from your table?</span>
+                          <span class="p-text-secondary block mb-8">Are you sure you want to delete workout titled {{workout.workoutTitle}} from your table?</span>
                         </div>
                           <div class="flex justify-end gap-2">
                               <p-button label="Cancel" severity="secondary" (click)="deleteDialogVisible = false" />
